# steam-audio-godot

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  openAPIspec.json
Writerside/topics/openAPIspec/: List_API_versions.topic  Show_API_version_details.topic
install/SteamAudioGodot/: SteamAudioGodot.gdextension
src/: CMakeLists.txt  register_types.cpp  register_types.h  steam_audio.cpp  steam_audio.h  steam_audio_dynamic_mesh.cpp  steam_audio_dynamic_mesh.h  steam_audio_globals.h  steam_audio_listener.cpp  steam_audio_listener.h  steam_audio_material.cpp  steam_audio_material.h  steam_audio_scene.cpp  steam_audio_scene.h  steam_audio_source.cpp  steam_audio_source.h  steam_audio_static_mesh.cpp  steam_audio_static_mesh.h
support_files/lib/osx/: libphonon.dylib
templates/: template.debug.gdextension.in
